# R2RML

./: .gitignore  .gitignore.swp  CMakeLists.txt  Database.cpp  Database.h  R2RML2019.sln  R2RML2019.vcxproj  R2RML2019.vcxproj.filters  RDFParser.cpp  RDFParser.h  README.md  Structures.h  Triple.cpp  Triple.h  TurtleParser.h  Utility.h  example  input  main.cpp  notes  output  testin  tinput  tiny_example  实验结果.xlsx
KVstore/: ConKVStore.cpp  ConKVStore.h  KVstore.cpp  KVstore.h
mapping/: Handle.cpp  Handle.h  Mapping.cpp  Mapping.h  R2RMLParesr.cpp  R2RMLParser.h  SelectQuery.cpp  SelectQuery.h  TriplesMap.cpp  TriplesMap.h
parser/: RDFParser.cpp  RDFParser.h  TurtleParser.cpp  TurtleParser.h  cmdLine.h
test/: test.cpp  test.h  testin  testout
util/: Logger.h  PairHash.h  Triple.cpp  Triple.h  Utility.h
x64/Release/: R2RML2019.exe.recipe  R2RML2019.exp
x64/Release/R2RML2019.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  R2RML2019.lastbuildstate  R2RML2019.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
